  * Make sure that stdout from language pack maintainer scripts doesn't
    interfere with Install's debconf protocol stream, and that a new debconf
    frontend is started for them in the target system.
  * Add set_fullname() and set_username() methods to the GTK frontend for
    use by user-setup.
  * Stop the installation progress bar on all return paths from
    Install.run().

 -- Colin Watson <cjwatson@ubuntu.com>  Wed,  1 Mar 2006 14:42:10 +0000

espresso (0.99.20) dapper; urgency=low

  * Add support for cancellable progress bars.
  * The Copy/Config split is more inconvenient than useful, so merge the two
    steps into one, called simply Install.
  * Install language packs according to the selected language.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed,  1 Mar 2006 14:13:17 +0000

espresso (0.99.19) dapper; urgency=low

  [ Jonathan Riddell ]
  * Add accessor methods to the GTK frontend for use by user-setup.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 28 Feb 2006 14:34:44 +0000

espresso (0.99.18) dapper; urgency=low

  * Rip all the /target unmounting code out of espresso.backend.copy and do
    it in the main espresso program just before exiting.
  * Parse /proc/mounts for mountpoints to unmount; this saves having to have
    a get_mountpoints method in every frontend.
  * Unmount /target before starting the frontend, since we will behave badly
    if /target is still mounted from a previous installation attempt.

  * Handle all PROGRESS commands entirely in debconffilter, without passing
    them through to the debconf frontend.
  * Add a PROGRESS REGION extension to debconffilter, and a ProgressPosition
    class to keep track of progress bar regions; allows a single progress
    bar to be subdivided into pieces for different stages.
  * Hack FilteredCommand.run_command() to execute the command without any
    debconffiltering glue if frontend is None; this allows nested
    FilteredCommands to more or less work.