@@ -82,6 +82,10 @@ if __name__ == '__main__':
         if 'DEBCONF_DEBUG' not in os.environ:
             os.environ['DEBCONF_DEBUG'] = 'developer|filter'
 
+    # Clean up old state.
+    if os.path.exists("/var/lib/espresso/apt-installed"):
+        os.unlink("/var/lib/espresso/apt-installed")
+
     if len(sys.argv) == 2:
         install(sys.argv[1])
     else:
